# payment-distribution-service

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_03_2015-1df38b0c67ac_initial_tables.py  2026_03_04_2011-92d9c9f0e11e_initial_migration.py  2026_03_09_0431-ffd100171967_initial_with_unique_fix.py  2026_03_09_1624-48f31164c850_transaction_change.py  2026_03_09_1635-85fc4aa63e16_add_transaction_constraints.py  2026_03_10_0104-8d276db6d7a6_change_transaction.py  2026_03_14_0047-7256af59334d_add_timezone_to_timestamp.py  2026_03_14_0052-bdcc6d2c46a0_add_timezone_to_timestamp.py
app/: main.py  tasks.py
app/api/dependencies/: auth.py
app/api/routers/: auth.py  users.py  wallets.py
app/core/: config.py  logging_config.py  security.py  sentry.py  tqk.py
app/db/: base.py  session.py
app/models/: transaction.py  user.py  wallet.py
app/schemas/: transaction.py  user.py  wallet.py
app/services/: user.py  wallet.py
docker/: Dockerfile
payment-distribution-service/: pyproject.toml
tests/: config.py  test_api.py  test_db.py  test_errors.py  test_transactions.py  test_worker.py
