[project]
name = "payment-distribution-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Isaev Saveliy",email = "isaev.saveliy.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "taskiq-redis (>=1.2.2,<2.0.0)",
    "sentry-sdk[fastapi] (>=2.55.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "black (>=26.1.0,<27.0.0)"
]
