[project]
name = "payment-distribution-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Isaev Saveliy",email = "isaev.saveliy.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "payment_distribution_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
